--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -1,1 +1,45 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100');
 
+* {
+    
+    margin: 0;
+    padding: 0;
+
+}
+
+body {
+    
+    text-align: center;
+    line-height: 44px;
+    color: rgb(42, 42, 42);
+    font-family: 'Montserrat';
+    
+}
+
+.content {
+    
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    flex-direction: column;
+    
+}
+
+.content__title {
+    
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: 300;
+    
+}
+
+.content__description {
+    
+    font-weight: 300;
+    font-size: 30px;
+    background: #f5f5f5;
+    border-radius: 5px;
+    padding: 5px 20px;
+
+}
